// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/shop/Product matches snapshot renders image with title, brand, size and price 1`] = `
<Card
  body={false}
  id="mockId"
>
  <CardImg
    className={null}
    variant="top"
  />
  <CardBody>
    <CardTitle>
      mockTitle
    </CardTitle>
    <CardText>
      <p>
        Brand: 
        mockBrand
      </p>
      <p>
        Size: 
        mockSize
      </p>
      <p>
        <b>
          Price: £
          mockPrice
        </b>
      </p>
    </CardText>
  </CardBody>
</Card>
`;

exports[`components/shop/Product matches snapshot when brand is not present renders default N/A 1`] = `
<Card
  body={false}
  id="mockId"
>
  <CardImg
    className={null}
    variant="top"
  />
  <CardBody>
    <CardTitle>
      mockTitle
    </CardTitle>
    <CardText>
      <p>
        Brand: 
        N/A
      </p>
      <p>
        Size: 
        mockSize
      </p>
      <p>
        <b>
          Price: £
          mockPrice
        </b>
      </p>
    </CardText>
  </CardBody>
</Card>
`;

exports[`components/shop/Product matches snapshot when product is sold renders with overlay 1`] = `
<Card
  body={false}
  id="mockId"
>
  <CardImg
    className="card-img-sold"
    variant="top"
  />
  <CardImgOverlay>
    <CardTitle>
      SOLD
    </CardTitle>
  </CardImgOverlay>
  <CardBody>
    <CardTitle>
      mockTitle
    </CardTitle>
    <CardText>
      <p>
        Brand: 
        N/A
      </p>
      <p>
        Size: 
        mockSize
      </p>
      <p>
        <b>
          Price: £
          mockPrice
        </b>
      </p>
    </CardText>
  </CardBody>
</Card>
`;
